# Hospital-Portal-System

./: .gitignore  HOSPITAL PORTAL SYSTEM.pptx  README.md  pyproject.toml  requirements.txt  run.py
hospital-env/: pyvenv.cfg
hospital-env/Scripts/: activate  activate.bat
hospital_flask/: __init__.py  forms.py  models.py  routes.py
hospital_flask/templates/: addappointment.html  appointment.html  blog.html  department.html  editappointment.html  editblog.html  layout.html  login.html  profile.html  register.html  registerpatient.html  staff.html
